--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     padding: 0;
     background: white;
-    background-color: #f4f4f4; /* استبدل هذا باللون الذي تريده */
+    background-color: #ffffff; /* استبدل هذا باللون الذي تريده */
 }
 
 
