--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Tajawal', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4 !important; /* استبدل اللون حسب رغبتك */
+    background-color: #ffffff !important; /* استبدل اللون حسب رغبتك */
     background-image: none !important;
 }
 
