--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ html, body {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     padding: 15px 0;
     z-index: 1000;
+    background-color: #301c41;
 }
 
 /* ✅ ضبط الحاوية الداخلية للشريط */
