--- a/styles.css
+++ b/styles.css
@@ -316,3 +316,14 @@ html, body {
 .navbar {
     background-color: #301c41;
 }
+
+.custom-shipping-button img {
+    width: 100px; /* تعديل حجم الزر حسب الحاجة */
+    height: auto;
+    transition: transform 0.3s ease-in-out;
+}
+
+.custom-shipping-button img:hover {
+    transform: scale(1.1); /* تكبير عند التمرير */
+}
+
